# VMEDAQ

./: .gitignore  README.md  README.rst  TODOLIST.rst
anaroot/: CBLT.hh  Makefile  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.in  libtool  setup.sh  wuhongyi.sh
anaroot/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
anaroot/example/AnaLoop/cut/: example.cut
anaroot/example/AnaLoop/wAnafile/: Monitor.C  example.ana  example2.ana  example_anafile.C
anaroot/example/AnaLoop/wROOT/: TArtAnaLoopUser.C  TArtAnaLoopUser.hh  example_root.C
anaroot/example/Go4/: Makefile  TArtEventSource.h  TArtParam.h  TArtProc.h  TArtRawEvent.cxx  setup.C
anaroot/example/Macros/: CalibRP.C  CheckBLDet.C  FitRPSTC.C  MySetup.C  RIDF2DataId.C  RIDF2Histo.C  RIDF2Tree.C  Root2DataId.C
anaroot/example/Macros/BigRIPS/: CheckBLDet.C
anaroot/example/Macros/DALI/: AnaDALI.C  CalibDALI.C  CheckDALIDet.C  TAlBigRIPS_ParamCheck.cc
anaroot/example/Macros/EURICA/: Analysis.C  CombineTS.C  CombineTS_OR.C  MakeAoQZ.C  MakeBigRIPSTree.C  MakeFullBigRIPSTree.C  MakeSiTree.C  README  ShowTS.C  SlimTree.C
anaroot/example/Macros/Online/: Monitor.C  ShowAdc.C  ShowDSSD.C  ShowModule.C  print.C
anaroot/example/Macros/SAMURAI/: DrawTargetProfile.C  FitSTC.C  MakePIDTree.C  MakeSAMURAIDCTPF.C  PrintDCEff.C
anaroot/example/Macros/standalone/: Makefile  README  RIDF2DataId.C
anaroot/gui/: AnaLoop.cxx  AnaLoop.pro  AnaScaler.cxx  AnaScaler.pro  AnafileEditor.py  AnafileEditor.ui  Q_DebugStream.h  README  TAlMainWindow.cxx  TAlMainWindow.h  TAlMainWindow.ui  TAlScaler.cxx  TAlScaler.h  TAlScaler.ui  TAlSelectScaler.cxx  TAlSelectScaler.h  TAlSelectScaler.ui  icon.qrc  install.sh  segidlistc.pl  setup.sh  shift.ana
anaroot/include/: TArtConfig.hh  TArtCore.hh  TArtDecoderAD413A.hh  TArtDecoderCTM405.hh  TArtDecoderFactory.hh  TArtDecoderFixed24.hh  TArtDecoderFixed32.hh  TArtDecoderL3377d.hh  TArtDecoderLUPO.hh  TArtDecoderP716X.hh  TArtDecoderV550.hh  TArtDecoderV830.hh  TArtFileDataSource.hh  TArtMap.hh  TArtParser.hh  TArtParserFactory.hh  TArtParserRDF.hh  TArtParserRIDF.hh  TArtRawDataObject.hh  TArtRawFADCDataObject.hh  TArtSemaphore.hh  TArtSharedMemoryDataSource.hh  TArtStoreManager.hh
anaroot/lib/: libanacore.la  libanacore.so.0.0.0  libanaroot.la  libanaroot.so.0.0.0
anaroot/run/: .rootrc  rootlogon.C
anaroot/run/db/: FocalPlane.xml
anaroot/run/matrix/: F10F11_Dispersive.mat  F10F11_DispersiveHR.mat  F10F11_HighResoAchr.mat  F10F11_LargeAccAchr.mat  F10F11_LargeAccAchr_HighBrho2.mat  F3F5_HighBrho.mat  F5F7_HighBrho.mat  F8F10_Dispersive.mat  F8F10_DispersiveHR.mat  F8F10_HighResoAchr.mat  F8F10_LargeAccAchr.mat  F8F10_LargeAccAchr_HighBrho2.mat  F8F11_Dispersive.mat  F8F11_DispersiveHR_modF11pos.mat  F8F11_Dispersive_modF11pos.mat  F8F9_Dispersive.mat  F8F9_DispersiveHR.mat  F8F9_HighResoAchr.mat  F8F9_LargeAccAchr.mat  F8F9_LargeAccAchr_HighBrho2.mat  F9F11_Dispersive.mat  F9F11_DispersiveHR.mat  F9F11_HighResoAchr.mat  F9F11_LargeAccAchr.mat  F9F11_LargeAccAchr_HighBrho2.mat  mat1.mat  mat2.mat  mat3.mat
anaroot/scripts/: anarootlogin.sh  csv2xml.pl  getAnaLoop.sh  setup.sh.org  spk2xml.pl  xml2csv.pl
anaroot/sources/: Makefile  Makefile.am  Makefile.in  libanaroot.la
anaroot/sources/.libs/: libanaroot.la  libanaroot.lai  libanaroot.so.0.0.0  libanaroot.so.0.0.0T
anaroot/sources/AnaLoop/: Makefile  Makefile.am
anaroot/sources/AnaLoop/Core/: Makefile.am  analoop_linkdef.hh
anaroot/sources/AnaLoop/EncExample/: Makefile.am  analoopencexample_linkdef.hh
anaroot/sources/AnaLoop/Example/: Makefile.am  analoopexample_linkdef.hh
anaroot/sources/Core/: Makefile  Makefile.am  Makefile.in  anacore_dict.cc  anacore_dict.h  anacore_dict.lo  anacore_dict_rdict.pcm  anacore_linkdef.hh  configure.in  libanacore.la
anaroot/sources/Core/.deps/: anacore_dict.Plo
anaroot/sources/Core/.libs/: libanacore.la  libanacore.lai  libanacore.so.0.0.0
anaroot/sources/Core/include/: TArtConfig.hh.in  TArtDataObject.hh  TArtDataSource.hh  TArtDecoder.hh  TArtDecoderA3100.hh  TArtDecoderAMTTDC.hh  TArtDecoderCBLT.hh  TArtDecoderDSP.hh  TArtDecoderFeminos.hh  TArtDecoderFixed16.hh  TArtDecoderMADC32.hh  TArtDecoderP716XZ.hh  TArtDecoderV1190.hh  TArtDecoderV1190C.hh  TArtDecoderV1290.hh  TArtDecoderV1740.hh  TArtDecoderV767.hh  TArtDecoderV7XX.hh  TArtEventInfo.hh  TArtEventStore.hh  TArtMath.hh  TArtRawDataObject.hh  TArtRawEventObject.hh  TArtRawFeminosDataObject.hh  TArtRawScalerObject.hh  TArtRawSegmentObject.hh  TArtReconstruction.hh  TArtSharedMemory.hh  TArtStreamingDataSource.hh  TArtUtil.hh  segidlist.hh  stamp-h1
anaroot/sources/Core/src/: TArtCore.cc  TArtDataSource.cc  TArtDecoderA3100.cc  TArtDecoderAD413A.cc  TArtDecoderAMTTDC.cc  TArtDecoderCBLT.cc  TArtDecoderCTM405.cc  TArtDecoderDSP.cc  TArtDecoderFactory.cc  TArtDecoderFeminos.cc  TArtDecoderFixed16.cc  TArtDecoderFixed24.cc  TArtDecoderFixed32.cc  TArtDecoderL3377d.cc  TArtDecoderLUPO.cc  TArtDecoderMADC32.cc  TArtDecoderP716X.cc  TArtDecoderP716XZ.cc  TArtDecoderV1190.cc  TArtDecoderV1190C.cc  TArtDecoderV1290.cc  TArtDecoderV1740.cc  TArtDecoderV550.cc  TArtDecoderV767.cc  TArtDecoderV7XX.cc  TArtDecoderV830.cc  TArtEventStore.cc  TArtFileDataSource.cc  TArtMath.cc  TArtParser.cc  TArtParserFactory.cc  TArtParserRDF.cc  TArtParserRIDF.cc  TArtRawDataObject.cc  TArtRawEventObject.cc  TArtRawScalerObject.cc  TArtRawSegmentObject.cc  TArtSemaphore.cc  TArtSharedMemory.cc  TArtSharedMemoryDataSource.cc  (+3 more)
anaroot/sources/Nadeko/: Makefile.am  ananadeko_linkdef.hh  configure.in
anaroot/sources/Nadeko/include/: TArtAlias.hh  TArtCanvasManager.hh  TArtExec.hh  TArtGlobal.hh  TArtHistManager.hh  TArtObjLinkManager.hh  TArtSimpleFunction.hh  TArtTreeManager.hh
anaroot/sources/Nadeko/src/: TArtAlias.cc  TArtCanvasManager.cc  TArtExec.cc  TArtGlobal.cc  TArtHistManager.cc  TArtObjLinkManager.cc  TArtSimpleFunction.cc  TArtTreeManager.cc
anaroot/sources/Reconstruction/: Makefile.am
anaroot/sources/Reconstruction/BigRIPS/: Makefile.am  anabrips_linkdef.hh
(+673 files in other folders)
