#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(anaroot, 4.5.15, [isobe@riken.jp])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([sources/Core/include/TArtConfig.hh.in])
AC_CONFIG_HEADER([sources/Core/include/TArtConfig.hh])
AC_ENABLE_STATIC(no)
AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CXX([g++ g++34])
AC_PROG_CC([gcc gcc34])
AC_PROG_RANLIB

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([limits.h stdlib.h string.h strings.h unistd.h])
if test "`uname -m`" = "x86_64" ; then
AC_SUBST(X11DIR,[/usr/lib64])
else
AC_SUBST(X11DIR,[/usr/X11R6/lib])
fi

ROOTLIBS="`$ROOTSYS/bin/root-config --glibs`"
AC_SUBST(ROOTLIBS)

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE

#Add libraries MINOS (AO, 01/03/2014)

AC_ARG_ENABLE(minos,
[  --enable-minos      enable MINOS [[default=no]]],
[\
case "${enableval}" in
 yes) use_minos=yes ;;
 no)  use_minos=no ;;
 *)   AC_MSG_ERROR(bad value for --enable-minos) ;;
esac],
use_minos=no)
if test x"${use_minos}" = x"yes"; then
  PKG_CHECK_MODULES(MINOS_FEM,minos-fem >= 1.1.1)
  AC_DEFINE(USE_MINOS, 1, [Define to 1 if you have minos package])
  echo "minos is enabled"
else
  echo "minos is disabled"
fi
AM_CONDITIONAL(USE_MINOS, test x"${use_minos}" = x"yes")

#AC_SUBST([MINOS_CFLAGS])
#AC_SUBST([MINOS_LIBS])

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([bzero memset strpbrk strtol])

AC_CONFIG_FILES([Makefile
                 sources/Makefile
                 sources/Core/Makefile])
#                 sources/Nadeko/Makefile
#                 sources/AnaLoop/Makefile
#                 sources/AnaLoop/Core/Makefile
#                 sources/AnaLoop/Example/Makefile
#                 sources/AnaLoop/EncExample/Makefile
#                 sources/Reconstruction/Makefile
#                 sources/Reconstruction/BigRIPS/Makefile
#                 sources/Reconstruction/SAMURAI/Makefile
#                 sources/Reconstruction/EURICA/Makefile
#                 sources/Reconstruction/MINOS/Makefile                 
#  		 sources/Reconstruction/WINDS/Makefile
#                 sources/Reconstruction/DALI/Makefile
#                ])
AC_OUTPUT
